# clipchimp

./: .gitignore  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: build-publish.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/clipchimp/: __init__.py  config.py
backend/clipchimp/logic/: __init__.py
backend/clipchimp/models/: __init__.py
backend/clipchimp/tasks/: __init__.py
frontend/: Dockerfile  entrypoint.sh  truffle.config.mjs
frontend/components/home/: home.scss.js  home.tsx
frontend/public/: global.css
frontend/routes/: layout.css.js
nginx/: Dockerfile  nginx.conf
