[tool.poetry]
name = "clipchimp"
version = "0.1.0"
description = "API backend for a youtube clip downloader."
authors = ["Jeremiah Boby <mail@jeremiahboby.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "clipchimp"}]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
fastapi = "^0.85.1"
requests = "^2.28.1"
pydantic = "^1.10.2"
celery = {extras = ["redis"], version = "^5.2.7"}
httpx = {extras = ["http2"], version = "^0.23.0"}
hyperframe = {git = "https://github.com/python-hyper/hyperframe.git", rev = "554fcad68beffae57dc8335ed5e02c177bfd6000"}
h2 = {git = "https://github.com/python-hyper/h2.git", rev = "63b6b97e691334464a57f933bfd7ed444f364708"}
yt-dlp = {git = "https://github.com/yt-dlp/yt-dlp.git"}
redis-lru = "^0.1.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
